# teenygrad

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yaml  test.yaml
examples/: Cargo.toml
examples/src/: bert.rs  llama.rs
examples/src/llama/: llama.rs  main.rs  personality.rs
nlputil/: Cargo.toml
nlputils/: Cargo.toml
nlputils/src/: lib.rs
pyutil/: Cargo.toml
pyutils/: Cargo.toml
pyutils/src/: torch.rs
teenygrad/: Cargo.toml
teenygrad/src/: helpers.rs  lib.rs  tensor.rs
teenygrad/src/nn/: embedding.rs  linear.rs  linear_norm.rs  mod.rs
teenygrad/src/shape/: mod.rs  shapetracker.rs  symbolic.rs  symbolic1.rs
teenygrad/src/shape/symbolic/: add.rs  ands.rs  factorize.rs  floordiv.rs  ge.rs  lt.rs  mod.rs  modulus.rs  mul.rs  neg.rs  sub.rs  sum.rs  vars.rs
teenygrad/tests/: test_shapetracker.rs  test_symbolic.rs
torch/: Cargo.toml
torch/src/: lib.rs  model.rs
