[package]
name = "examples"
description = "Example models implemented using Teenygrad"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
teenygrad = { path = "../teenygrad" }
nlputils = { path = "../nlputils" }
pyutils = { path = "../pyutils" }
clap = { version = "4.4.5", features = ["derive"] }
glob = "0.3.1"
error-chain = "0.12.4"
itertools = "0.11.0"
log = "0.4.20"

[[bin]]
name = "llama"
path = "src/llama.rs"
